# Nao-with-Qt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qiproject.xml
